--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="img">
                         <img src="./asset/img/MeUndies.svg" alt="MeUndies" />
-                        <img src="./asset/img/Slack.svg" alt="Slack" />
+                        <img src="./asset/img/slack.svg" alt="Slack" />
                         <img src="./asset/img/Amazon.svg" alt="Amazon" />
                         <img
                             src="./asset/img/WooCommerce.svg"
