--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 
     <body>
         <main>
-            <!--========== Header ==========-->
-            <header class="header">
+            <header class="fixed-header">
                 <div class="content">
+                    <!-- Navbar -->
                     <nav class="navbar">
                         <!-- Logo -->
-                        <img src="./asset/img/logo.svg" alt="Besnik." />
+                        <a class="back-home" href="./index.html"
+                            ><img src="./asset/img/logo.svg" alt="Besnik."
+                        /></a>
                         <!-- Navigation -->
                         <ul>
                             <li><a href="#!">Home</a></li>
@@ -37,7 +39,11 @@
                             <a href="#!" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
-
+                </div>
+            </header>
+            <!--========== Hero ==========-->
+            <header class="Hero-wrap">
+                <div class="content">
                     <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
