--- a/index.html
+++ b/index.html
@@ -4,6 +4,85 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Project 01</title>
+
+        <!-- Favicon -->
+        <link
+            rel="apple-touch-icon"
+            sizes="57x57"
+            href="./asset/favicon/apple-icon-57x57.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="60x60"
+            href="./asset/favicon/apple-icon-60x60.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="72x72"
+            href="./asset/favicon/apple-icon-72x72.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="76x76"
+            href="./asset/favicon/apple-icon-76x76.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="114x114"
+            href="./asset/favicon/apple-icon-114x114.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="120x120"
+            href="./asset/favicon/apple-icon-120x120.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="144x144"
+            href="./asset/favicon/apple-icon-144x144.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="152x152"
+            href="./asset/favicon/apple-icon-152x152.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./asset/favicon/apple-icon-180x180.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="192x192"
+            href="./asset/favicon/android-icon-192x192.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./asset/favicon/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="96x96"
+            href="./asset/favicon/favicon-96x96.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./asset/favicon/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/manifest.json" />
+        <meta name="msapplication-TileColor" content="#ffffff" />
+        <meta
+            name="msapplication-TileImage"
+            content="./asset/favicon/ms-icon-144x144.png"
+        />
+        <meta name="theme-color" content="#ffffff" />
+        <!-- Reset CSS -->
         <link rel="stylesheet" href="./asset/css/reset.css" />
         <link rel="stylesheet" href="./asset/fonts/stylesheet.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,33 +95,33 @@
     </head>
 
     <body>
-        <main>
-            <header class="fixed-header">
-                <div class="content">
-                    <!-- Navbar -->
-                    <nav class="navbar">
-                        <!-- Logo -->
-                        <a class="back-home" href="./index.html"
-                            ><img src="./asset/img/logo.svg" alt="Besnik."
-                        /></a>
-                        <!-- Navigation -->
-                        <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
-                            <li><a href="#!">Services</a></li>
-                            <li><a href="#!">Resources</a></li>
-                            <li><a href="#!">Contact</a></li>
-                        </ul>
-                        <!-- Action -->
-                        <div class="action">
-                            <a href="#!" class="action-link">Sign in</a>
-                            <a href="#!" class="btn action-btn">Sign up</a>
-                        </div>
-                    </nav>
-                </div>
-            </header>
+        <header class="fixed-header">
+            <div class="content">
+                <!-- Navbar -->
+                <nav class="navbar">
+                    <!-- Logo -->
+                    <a class="back-home" href="./index.html"
+                        ><img src="./asset/img/logo.svg" alt="Besnik."
+                    /></a>
+                    <!-- Navigation -->
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#featured">Features</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#resources">Resources</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                    <!-- Action -->
+                    <div class="action">
+                        <a href="#!" class="action-link">Sign in</a>
+                        <a href="#!" class="btn action-btn">Sign up</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <main id="home">
             <!--========== Hero ==========-->
-            <header class="Hero-wrap">
+            <div class="Hero-wrap">
                 <div class="content">
                     <div class="hero">
                         <div class="info">
@@ -66,7 +145,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
             <!--========== Client =========-->
             <div class="client">
                 <div class="content">
@@ -101,7 +180,7 @@
                 </div>
             </div>
             <!--========== Guide =========-->
-            <div class="guide">
+            <div id="services" class="guide">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -164,7 +243,7 @@
                     </div>
                 </div>
             </div>
-            <div class="featured">
+            <div id="featured" class="featured">
                 <div class="content">
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
@@ -403,7 +482,7 @@
                 </div>
             </div>
             <!--========== Subscription =========-->
-            <div class="subscription">
+            <div id="resources" class="subscription">
                 <div class="content">
                     <div class="body">
                         <div class="info">
@@ -423,92 +502,92 @@
                     </div>
                 </div>
             </div>
-            <footer class="footer">
-                <div class="content">
-                    <div class="body">
-                        <div class="column">
-                            <h3>
-                                <span>Product</span>
-                            </h3>
-                            <ul class="list">
-                                <li class="item"><a href="#!">Listing</a></li>
-                                <li class="item"><a href="#!">Property</a></li>
-                                <li class="item"><a href="#!">Agents</a></li>
-                                <li class="item"><a href="#!">Blog</a></li>
-                            </ul>
-                        </div>
-                        <div class="column">
-                            <h3>
-                                <span>Resources</span>
-                            </h3>
-                            <ul class="list">
-                                <li class="item"><a href="#!">Our Homes</a></li>
-                                <li class="item">
-                                    <a href="#!">Member Stories</a>
-                                </li>
-                                <li class="item"><a href="#!">Video</a></li>
-                                <li class="item">
-                                    <a href="#!">Free trial</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="column">
-                            <h3>
-                                <span>Company</span>
-                            </h3>
-                            <ul class="list">
-                                <li class="item">
-                                    <a href="#!">Patnerships</a>
-                                </li>
-                                <li class="item">
-                                    <a href="#!">Terms of use</a>
-                                </li>
-                                <li class="item"><a href="#!">Privacy</a></li>
-                                <li class="item"><a href="#!">Sitemap</a></li>
-                            </ul>
-                        </div>
-                        <div class="column">
-                            <h3>
-                                <span>Get in touch</span>
-                            </h3>
-                            <p class="desc">
-                                You’ll find your next home, in any style you
-                                prefer.
-                            </p>
-                            <div class="social">
-                                <a href="#!" class="social-link">
-                                    <img
-                                        src="./asset/img/facebook-logo.svg"
-                                        alt="facebook icon"
-                                    />
-                                </a>
-                                <a href="#!" class="social-link">
-                                    <img
-                                        src="./asset/img/twitter-logo.svg"
-                                        alt="twitter icon"
-                                    />
-                                </a>
-                                <a href="#!" class="social-link">
-                                    <img
-                                        src="./asset/img/in-logo.svg"
-                                        alt="lindedin icon"
-                                    />
-                                </a>
-                            </div>
-                        </div>
+        </main>
+        <!-- ========== Contact ========== -->
+        <footer id="contact" class="footer">
+            <div class="content">
+                <div class="body">
+                    <div class="column">
+                        <h3>
+                            <span>Product</span>
+                        </h3>
+                        <ul class="list">
+                            <li class="item"><a href="#!">Listing</a></li>
+                            <li class="item"><a href="#!">Property</a></li>
+                            <li class="item"><a href="#!">Agents</a></li>
+                            <li class="item"><a href="#!">Blog</a></li>
+                        </ul>
                     </div>
-                    <div class="copyright">
-                        <img
-                            src="./asset/img/logo.svg"
-                            alt="logo"
-                            class="logo copyright-logo"
-                        />
-                        <div class="copyright-desc">
-                            Copyright 2020.com, All rights reserved.
+                    <div class="column">
+                        <h3>
+                            <span>Resources</span>
+                        </h3>
+                        <ul class="list">
+                            <li class="item"><a href="#!">Our Homes</a></li>
+                            <li class="item">
+                                <a href="#!">Member Stories</a>
+                            </li>
+                            <li class="item"><a href="#!">Video</a></li>
+                            <li class="item">
+                                <a href="#!">Free trial</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3>
+                            <span>Company</span>
+                        </h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="#!">Patnerships</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Terms of use</a>
+                            </li>
+                            <li class="item"><a href="#!">Privacy</a></li>
+                            <li class="item"><a href="#!">Sitemap</a></li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3>
+                            <span>Get in touch</span>
+                        </h3>
+                        <p class="desc">
+                            You’ll find your next home, in any style you prefer.
+                        </p>
+                        <div class="social">
+                            <a href="#!" class="social-link">
+                                <img
+                                    src="./asset/img/facebook-logo.svg"
+                                    alt="facebook icon"
+                                />
+                            </a>
+                            <a href="#!" class="social-link">
+                                <img
+                                    src="./asset/img/twitter-logo.svg"
+                                    alt="twitter icon"
+                                />
+                            </a>
+                            <a href="#!" class="social-link">
+                                <img
+                                    src="./asset/img/in-logo.svg"
+                                    alt="lindedin icon"
+                                />
+                            </a>
                         </div>
                     </div>
                 </div>
-            </footer>
-        </main>
+                <div class="copyright">
+                    <img
+                        src="./asset/img/logo.svg"
+                        alt="logo"
+                        class="logo copyright-logo"
+                    />
+                    <div class="copyright-desc">
+                        Copyright 2020.com, All rights reserved.
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
